create github pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   
   <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
-  <link rel="stylesheet" href="assets/FontAwesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -102,7 +101,7 @@
                 
                 <div class="subscribe__form" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A4QcT8XX30RlNnfdCUu/1QxtU1kRN55DULgSKftbiagBqpCJv/VzRGEYwI2oh9vIixOcEx89+K6MP0sg91U7eKtZbWleQIOZQqarFvt/2+ZPDqnzE0FI9pdNZuWBLfec.ersZCSplj46Y8zzx/CQ6E9e/UNgqHEy4wi54iwRRBAlJGXr4PEffC6wHMZkUo/bUnCHeoFoXHw9So/Z+999o8W0MsqXs7lg/PRkQ8cJS/UfqULk1C0X9cBzsm3B5FfbY">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ke9AmRcYgltYJKeqWbQFcP5XCUEDUmRmmd1TPOEiRbmqGnBrBjyaIDidxeWh9x6m+MN2hy24hM/Yle1jEokEsK1bHXBBEm8V/N3pxa+0Xekyr6tOmh8DjR8z2M5/U1Hc.GkCs3rljXE2aF+GvzChFC+kfm7k+7d9z9F2HZufRJkvwb5/32WIfXehCzeLsSntVJL4YVpQebo+GiPG6w+LSVoZhR9/hz3I6E8N10e3xPAFJiHcd9p5bajVhwFFyI/Jk">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
@@ -351,7 +350,7 @@
 	<div class="container-fluid">
 		<div class="row main">
 			<div class="col-md-6 map">
-				<div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=5505 Boul St-Laurent #2000, Montréal, QC H2T 1S6, Canada" allowfullscreen=""></iframe></div>
+				<div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=5505 Boul St-Laurent #2000, Montréal, QC H2T 1S6, Canada" allowfullscreen=""></iframe></div>
 			</div>
 			<div class="col-md-6 text-white wrap__content">
 				<div class="col-md-6 col-sm-6 block__content1 align-left">
@@ -406,7 +405,7 @@
 			
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> themes</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> web template</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
