--- a/profesores.html
+++ b/profesores.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="Wex9JVG5RL5yWPA1ACtw/OR/JOk3j2p58wZDeylNSj5EyDzyoiQfHlng1Fn3QeWgNoBOgQJ9MRA3xv1n6UKWg5hkR/qfsti7vZi+uS99EmmVfO5Yac++SFHTmorTtrqc.hn+x8ckzhiGDqbRZRdjLT4xQ72TLToJoUkkOxiX3i4fyrxVwTU/UkGCbV/ofYY+sZYb+SxP5j/pC08KVwhqKff0uvnB+BbTNI35WHacgyAVK644Pi82XL76O+JZDZNsW">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="38JgcdYZ2DnEcx7hkjfLT2sVwrg9xNqb7DtVcM1qxJ71ZBl64HpiWW/oSt/YJku+/bR8EXYaGP3TCyrtOcRD6iIVhQHDloDXJIB5xIG6GO+9fxPd5O1PG997G6FPdZa9.zcq139J9bBs2Ot1bNMsBXpsTGJMiQ3a6308kGf138h3vkbs4JL7TBYvonAmXZWrz5IzojcfbGL5LI7aERPjtQHbck6W098tMDVPgmfxoIxS7U4WkLpA4OhZbNn4xYwBU">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -206,16 +206,16 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/profesorroyal3-730x536.png" alt="Mobirise">
+                            <a href="interior-profesores.html"><img src="assets/images/francorocha-730x517.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
                             <h5 class="card-title mbr-fonts-style m-0 display-5">
-                                <strong>Aitana Gómez</strong></h5>
+                                <strong>Franco Rocha</strong></h5>
                             <h6 class="mbr-fonts-style mb-3 display-4">
-                                <strong>Bailarina</strong><br><br></h6>
-                            <p class="mbr-text mbr-fonts-style display-7"></p>
+                                <strong>Bailarin</strong><br><br></h6>
+                            <p class="mbr-text mbr-fonts-style display-7">Themes in the Mobirise website builder offer multiple blocks: intros, sliders, galleries, forms, articles, and so on. Start a project and click on the red plus buttons to see the blocks available for your theme.</p>
                             
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/francorocha-730x517.png" alt="Mobirise">
+                            <a href="interior-profesores.html"><img src="assets/images/profesorroyal3-730x536.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
@@ -253,13 +253,12 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4">
                         <div class="image-wrapper">
-                            <img src="assets/images/profesorroyal3-730x536.png" alt="Mobirise">
+                            <a href="interior-profesores.html"><img src="assets/images/profesorroyal3-730x536.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-12 col-md">
                         <div class="card-box">
-                            <h5 class="card-title mbr-fonts-style m-0 display-5">
-                                <strong>Franco Rocha</strong></h5>
+                            <h5 class="card-title mbr-fonts-style m-0 display-5"><strong>Aitana Gómez</strong></h5>
                             <h6 class="mbr-fonts-style mb-3 display-4"><strong>Dance</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">
                                 Themes in the Mobirise website builder offer multiple blocks: intros, sliders,
@@ -383,7 +382,7 @@
 			
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up a site - <a href="https://mobirise.site/w" style="color:#aaa;">See it</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/d" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page <a href="https://mobirise.site/f" style="color:#aaa;">was built</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
