create github pages

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="cursos.html">CURSOS</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="profesores.html">PROFESORES</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#map1-2j">CONTACTO</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="index.html">
-                        LOGIN</a> <a class="btn btn-secondary display-4" href="index.html#info1-f">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="login.html">
+                        LOGIN</a> <a class="btn btn-secondary display-4" href="registro.html">
                         SUSCRÍBETE</a> <a class="btn btn-black-outline display-4" href="pasarela-pago.html"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span></a></div>
             </div>
         </div>
@@ -105,7 +105,7 @@
                 
                 <div class="subscribe__form" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LO4ly7yL97yVgifxGtzrQtdq5cvi/qpdDj5RC5/o5lz85qn1HLQbHn0qlH/dnUqZnApRmueHx4Z94oTJeDORZzzFhU3uOx5XAaxqMapA5FlCLBSEVcO4Rq5XJbSMbYUH.WZVaRfIvGJi6MKb7Xc+uR9VyRj3JXaYgK6xX1uv4xsT6nHYP0wa9/wta9j0Rg8CeX0wB0ZmwY4Xu9kSQxMRPxVHIBdwJJ1weoypdEL6HizZuBlEWOTtewSjc5MrlKjs6">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="L4UklV0JyeeNxMfclv2t8DJrWCIqDhJBHI9jkpVxZTVyrMOkjWbelV/MNbo6L2jZ814booBR5GbU49zqEjY7XjGmaGCwDF+W+Cig+p2LhdZgNoMUiMSQGQ92pvU2Ny1E.d/rps1U/V8JPxLLE1QJdECwN47meZUoMK0O4SLgeFU2+3pIFbILoi02GmyUiPU3CE9b9M/lfNDh7xUpLk5UdJPIbysRJJnJC7qSeZIVTe6jw/f67pEpIVYrB3aND38cZ">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                                 out the form!</div>
@@ -356,7 +356,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-lg-6 col-md-12 col-sm-12">
-				<div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Calle Alicante N82, alicante" allowfullscreen=""></iframe></div>
+				<div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Calle Alicante N82, alicante" allowfullscreen=""></iframe></div>
 
 				<div class="map-placeholder">
 					<div placeholder="">
@@ -423,7 +423,7 @@
 
 				<div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kHZvU8YBiyIDo/e+HvPslfDEqe4p8egWY/+nVIWdeh+8KsYt4jtvp9c6pn+6OeFoLyd0cTNJmhz1rv4ZTTZBpy0rygDRtuqF99ALXvmJvZHhG58wC+C/nHXKbdIqDZXX.ufDMottMHO4yryX+Vahu3BYjMbnjYxI8gQCDKAf9PRMKaTJW5ylL2mZAelPTg/673VPML58bkP9Kaet95a2tGOmiADqZ8Wuh5QDUmoKOjCg1t4TGDZcgjGmDbzFN+4vk">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DaWCKvCSw02BEB2R+NvbZFufswe79D7KhLvK/cjZinnriJoP/JPJTiFyAbXw18HdwaDafwFpchBO6qAUvBaLy19/wJvNSs362vYXYgW99TrpEKeW+0J+M1kMsVT1tM8Y.kY7C2vLDC9Zp6wFpkvmrBVSeZ9OHgo35+UFYUhzLSwvh3xWJCNMbCCkLJNByJXpzO2+LvjhOxkLJJA+daV7J0X7xpMrQLS8lR3P5QAWkZGxLdOAycYYm3K5xB8uuEJpc">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">¡Gracias por contactar con nosotros!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -485,7 +485,7 @@
 			
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website builder - <a href="https://mobirise.site/p" style="color:#aaa;">Find more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Start your own <a href="https://mobirise.site/y" style="color:#aaa;">website</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
