--- a/cursos.html
+++ b/cursos.html
@@ -62,8 +62,8 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="cursos.html">CURSOS</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="profesores.html">PROFESORES</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#map1-2j">CONTACTO</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="index.html">
-                        LOGIN</a> <a class="btn btn-secondary display-4" href="index.html#info1-f">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="login.html">
+                        LOGIN</a> <a class="btn btn-secondary display-4" href="registro.html">
                         SUSCRÍBETE</a> <a class="btn btn-black-outline display-4" href="pasarela-pago.html"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span></a></div>
             </div>
         </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="lG4o84KGe5BmxoP3i84vp1MfmtIAOWAiTzfI3A1J2ReN+tKOfNpaByqzSFtMknNCvGpf1ro+MpoPGwVwY7YzhvYqWceG3XFD/hwhyOxFD85E7bTBYvUhbrcNz2HckCJu.jWTfo+DBvyFbzLWtRJ81isdweUU91pIEBPbVwHtUbf4LYqz8iAPwuEMuKxHdcm3L9T5uNtguGa6Ff6nLwHQXpkXsDNbPitfsEJdtd2XZP9p0MnKstLh0cZ/0QZmJ5kc8">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="O1WotJaaca9q8nCKwo3CGUQGxZBiKNXrsrAlumAH4J9LHNmprqR0+MbnmM6Ms4hRWIGHE1TqDP55BUOoWjr5rmvisUT2Mp5Qk4ATSAd4Pf3YCYsAHAeLbDhlFsHVj3aQ.uCo1ux7Y/O9W4aUTKPwrePHUs4JBDEk9f/K72dqC4lQnussLFN5iY8F1M6WV1nRI2RFYYYHiGdKjDjqWp4CQ+ZB4lGGYGLgmLqn5zO1D2Uam2oEiNvHKM8+krLgKJxl6">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -273,7 +273,7 @@
 			
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web creator - <a href="https://mobirise.site/n" style="color:#aaa;">See it</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise <a href="https://mobirise.site/u" style="color:#aaa;">website</a> themes</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
