--- a/profesores.html
+++ b/profesores.html
@@ -61,8 +61,8 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="cursos.html">CURSOS</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="profesores.html">PROFESORES</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#map1-2j">CONTACTO</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="index.html">
-                        LOGIN</a> <a class="btn btn-secondary display-4" href="index.html#info1-f">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="login.html">
+                        LOGIN</a> <a class="btn btn-secondary display-4" href="registro.html">
                         SUSCRÍBETE</a> <a class="btn btn-black-outline display-4" href="pasarela-pago.html"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span></a></div>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="tb/1iuGe6CDrIfMgz6OfbN2JZYqehhXezQu1l0z4EXodENBAL1gBXHbplzRBLnGmSKnG/6FMfAHbAdVElbnOY5ewbHcte0FnO5HZs+D150XdtqvgFeZYLawLFyySJma5.lxdtMCjHMdcfSEYO1dpq+Dm7SatPDGfJNCnabCGDV+giAXQPUS8tUHJg69MXu5k7KaJg8RHk5T4anwbpuPe2dxG+1MRNkqdeooUs77DUbQRZdsRVEEyL7LhVm/bPbPkF">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="1jcoBMVA9qY1UWqFY+gN9TA91GhG2ax3tztDPXZRSidc3GiY5InFD73yTeBOC1T+UlZnE2il2g540HaDI0CAIH/kLn1PIeUNYC1q7AC68ghA7Idlww2KP8yhlRL0j0um.PL4MvPZ+Viz8ioMIsfPJuc0hvbmNeJrM1eFBmBjheaBNW0dWopeqUMTyYCAqw11HStST5DbzZiwQTgUpLNuwBpSCV/kBT2XApTKwfXIMWawYNDPPFcKPj/En6nEMbLcW">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -382,7 +382,7 @@
 			
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/k" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise <a href="https://mobirise.site/u" style="color:#aaa;">website</a> themes</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/l" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise site software - <a href="https://mobirise.site/p" style="color:#aaa;">Find more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
