create github pages

--- a/registro.html
+++ b/registro.html
@@ -23,7 +23,6 @@
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -32,7 +31,7 @@
 </head>
 <body>
   
-  <section class="menu menu2 cid-ssEWFYfK2J" once="menu" id="menu2-2q" data-sortbtn="btn-primary">
+  <section class="menu menu2 cid-ssEWFYfK2J" once="menu" id="menu2-2q">
     
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container-fluid">
@@ -68,21 +67,21 @@
     </nav>
 </section>
 
-<section class="form cid-susyG3iSOY" id="formbuilder-2s" data-sortbtn="btn-primary">
+<section class="form cid-susyG3iSOY" id="formbuilder-2s">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
+            <div class="col-lg-8 mx-auto mbr-form">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="W5+Dr0ge0dUCIMT8z0wBzM4HPDdA2XYZ+opIgvk9vr4OBxWcN7YXO0Wgr8RXrphLUBNPKhoXFIrqNSvfeVyy1KD1Iqa6zGR1NnQiIY05/qrx3Cc/Hygy4xa9fYmBMpSU.Pu3Wr4Fs1sy1/FP+54Az6Kx+RiBPndyV6jUfisFJAJf9o0sxSwsGVUnE6plSECwQ+oc4Q7Ml7kpVIRMAuD7MwGYaqhvZEKk1HPGEmF+dtmHBD7gOqfUVwpx8SU+1tQ0G">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler">
 <div class="form-row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-5"><strong>¡Suscríbete!</strong></h4>
+<h4 class="mbr-fonts-style display-2"><strong>¡Suscríbete!</strong></h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
@@ -119,7 +118,7 @@
     </div>
 </section>
 
-<section class="footer3 cleanm4_footer3 cid-ssEWFYKuuQ" once="footer" id="footer3-2r" data-sortbtn="btn-primary">
+<section class="footer3 cleanm4_footer3 cid-ssEWFYKuuQ" once="footer" id="footer3-2r">
 
 	
 
@@ -144,7 +143,7 @@
 			
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/m" style="color:#aaa;">Learn more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">https://mobirise.com</a> simple website software</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
