create github pages

--- a/profesores.html
+++ b/profesores.html
@@ -61,8 +61,8 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="cursos.html">CURSOS</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="profesores.html">PROFESORES</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#map1-2j">CONTACTO</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="login.html">
-                        LOGIN</a> <a class="btn btn-secondary display-4" href="registro.html">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="index.html#form1-3">
+                        LOGIN</a> <a class="btn btn-secondary display-4" href="suscripcion.html">
                         SUSCRÍBETE</a> <a class="btn btn-black-outline display-4" href="pasarela-pago.html"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span></a></div>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="M0dcH1kroiB7A5xZ11+JBE+Ndk3yDpxeMIOpX5+ivHQeNCa/hLljPuHem34A/6J4t+/1kw8cwJ2gWu4PPLui46Qohc7vWEl7AfjhMXweZOcX864AcR3j0Ny841IzwUG7.qVV8B4bOoeoGeR6W0YJZnYgBiFEnwiklQ6sBLYXrA546IskZy3zRhSEFpHmRSFBTEBGt+4G/wEkiuwcq2LjNfYoOrI8cPEd9GeLa8q4szhGdYwGfLYnTdUhHuJYI7hOa">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="rcy/cyDr/SuBUzH8ELzlTsDbB3DE0EdlKGkhzvbDCfAMfERAL7A89PX3OS3ekqi9pmCrgaAbohxgsYKKvO+Hh+Dzl39tOCFOTZwNObM4t0BjrsgNW8gOsm/DLVceV/9b.Wyyjf/EZmq0HgCdUXWUv87MWuqCII/xdVa7l5f0MlV+gSawJk+h/0aCw3iyMhFKGThiKjy05LFG77nEVRV5JsixC0FTlWdCpgZNWv3IDkPexOwslnRvdgBtSo0IXtgH8">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -382,7 +382,7 @@
 			
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/o" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">The <a href="https://mobirise.site/e" style="color:#aaa;">page</a> was made with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page was <a href="https://mobirise.site/g" style="color:#aaa;">built</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
