--- a/cursos.html
+++ b/cursos.html
@@ -62,8 +62,8 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="cursos.html">CURSOS</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="profesores.html">PROFESORES</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#map1-2j">CONTACTO</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="login.html">
-                        LOGIN</a> <a class="btn btn-secondary display-4" href="registro.html">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="index.html#form1-3">
+                        LOGIN</a> <a class="btn btn-secondary display-4" href="suscripcion.html">
                         SUSCRÍBETE</a> <a class="btn btn-black-outline display-4" href="pasarela-pago.html"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span></a></div>
             </div>
         </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="nGrxLK+ORqMZPBxXJ/JtjW1440vrIjquwdyEdj8fWZXuQ63ivvHe7iiz04P9JkDW0jJbW+1Z+TCCDt4fMM8rEoF88jy7O3dny1Juy3rtw8wkKqp1nogc04EwtyWyxhPR.ITG23qpeSvJr6qJDOpnoAiq8RLTTlAH6LJL74HcDtdBoGn4jq/8e8L7InksdDfL18yJbQ+/rVeIVoCUXMfg1E3T9ziLsy2fVi3goeEuGdnSVENeoLi6HMYHAqPZiZkrg">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Nivel"><input type="hidden" name="email" data-form-email="true" value="UdMf/iBEw1ZXBFYfvN38EpILBQahSCFSrvi9n1tSbFjZdTFtcBOAzJ8JekMmzeRvkZ0pCYYAqjd5TaZSjLW7QdRUoubGm1ct3VduByxgYLbuV4DA2xSccz/c7PHT3ODp.CwxRddffrnfd+3KA9p2PAPhxujSg6bjE4jKUtA2RgGe2ahBRdZabje8hHUkv+wcbgfvTYcM2JZ/S9JXCZLEHlh0jpKtVW0cT7F64a9TdKhThLrTbtGcimYhZ8CJB+Foc">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Gracias!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -273,7 +273,7 @@
 			
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page <a href="https://mobirise.site/f" style="color:#aaa;">was made</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/s" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with Mobirise - <a href="https://mobirise.site/k" style="color:#aaa;">Click for more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
