--- a/page9.html
+++ b/page9.html
@@ -10,9 +10,8 @@
   <meta name="description" content="">
   
   
-  <title>RD Online</title>
+  <title>Page 9</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -29,7 +28,7 @@
 </head>
 <body>
   
-  <section class="menu menu2 cid-ssFfL8lX58" once="menu" id="menu2-1f">
+  <section class="menu menu2 cid-ssyG6Yu2Ev" once="menu" id="menu2-31" data-sortbtn="btn-primary">
     
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container-fluid">
@@ -65,48 +64,7 @@
     </nav>
 </section>
 
-<section class="video01 industrym4_video01 cid-ssFgRKwi7W" id="video001-1m">
-
-	
-
-	
-
-	<div class="back"></div>
-
-	<div class="container align-center">
-		<div class="col-md-12 col-lg-12 text">
-			<h2 class="mbr-section-title align-center mbr-semibold pb-4 mbr-fonts-style display-2">
-				<div><span style="font-size: 2.8rem;"><strong>RD Online</strong></span><br></div>
-			</h2>
-		</div>
-		<div class="row justify-content-center">
-			<div class="mbr-white box col-md-12 col-12 col-lg-10">
-				<div class="mbr-media show-modal align-center py-2" data-modal=".modalWindow">
-					<div class="icon-wrap">
-						<span class="mbr-iconfont mobi-mbri-play mobi-mbri"></span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div>
-		<div class="modalWindow" style="display: none;">
-			<div class="modalWindow-container">
-				<div class="modalWindow-video-container">
-					<div class="modalWindow-video">
-						<iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://www.youtube.com/watch?v=QIs695Irf6Y"></iframe>
-					</div>
-					<a class="close" role="button" data-dismiss="modal">
-						<span aria-hidden="true" class="mbri-close mbr-iconfont closeModal"></span>
-						<span class="sr-only">Close</span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="footer3 cleanm4_footer3 cid-ssFfL90hcJ" once="footer" id="footer3-1g">
+<section class="footer3 cleanm4_footer3 cid-ssySthus4b" once="footer" id="footer3-32" data-sortbtn="btn-primary">
 
 	
 
@@ -131,7 +89,7 @@
 			
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">This <a href="https://mobirise.site/e" style="color:#aaa;">web page</a> was started with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website creator - <a href="https://mobirise.site/p" style="color:#aaa;">Find more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
